# qbsp

./: .gitignore  Cargo.toml  README.md  readme.md  rustfmt.toml
assets/: example-bsp29.bsp  example-halflife.bsp  example-qbism.bsp  example-quake2.bsp  example.bsp
ci/: full_check.bat  full_check.sh
q1bsp_macros/: Cargo.toml
q1bsp_macros/src/: lib.rs
qbsp_macros/: Cargo.toml
qbsp_macros/src/: lib.rs
src/: data.rs  lib.rs  loading_tests.rs  mesh.rs  prelude.rs  query.rs  raycast.rs  reader.rs  util.rs
src/data/: brush.rs  bsp.rs  bsp3x.rs  bspx.rs  idtech2.rs  lighting.rs  mod.rs  models.rs  nodes.rs  q1bsp.rs  texture.rs  util.rs  visdata.rs
src/mesh/: lighting.rs  mod.rs
src/mesh/lightmap/: mod.rs  packer.rs
tools/: readme.md
tools/write-lightmaps/: Cargo.toml  readme.md
tools/write-lightmaps/src/: main.rs
