[workspace]
members = ["qbsp_macros"]

[workspace.package]
version = "0.3.1"
description = "Rust crate for parsing and operating with Quake 1 BSP files"
edition = "2021"
authors = ["Noxmore"]
repository = "https://github.com/Noxmore/qbsp"
license = "MIT OR Apache-2.0"


[package]
name = "qbsp"
readme = "readme.md"
categories = ["game-development"]
exclude = ["assets"]

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
glam = "0.29"
image = { version = "0.25", default-features = false }
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
texture_packer = { version = "0.29", optional = true }
thiserror = "2.0"
qbsp_macros = { version = "0.3.1", path = "qbsp_macros" }
derive_more = { version = "2", features = [
	"deref",
	"deref_mut",
	"into_iterator",
] }
bevy_reflect = { version = "0", features = ["glam"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["meshing"]
meshing = ["dep:texture_packer"]
bevy_reflect = ["dep:bevy_reflect"]
serde = ["dep:serde", "smallvec/serde"]
