[workspace]
members = ["qbsp_macros", "tools/*"]

[workspace.package]
version = "0.13.0"
description = "Rust crate for parsing and operating with Quake 1, 2, and GoldSrc BSP files"
edition = "2021"
authors = ["Noxmore"]
repository = "https://github.com/Noxmore/qbsp"
license = "MIT OR Apache-2.0"


[package]
name = "qbsp"
readme = "readme.md"
categories = ["game-development"]
exclude = ["assets"]

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
qbsp_macros = { version = "0.13.0", path = "qbsp_macros" }

bitflags = "2.10"
glam = "0.30" # See mini-rant below.
image = { version = "0.25", default-features = false }
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
texture_packer = { version = "0.30", optional = true }
thiserror = "2.0"
derive_more = { version = "2", features = [
	"deref",
	"deref_mut",
	"into_iterator",
] }
# The API is pretty stable, and I'd rather not get tied to Bevy's release cycle.
# Unfortunately, Cargo doesn't seem to know how to resolve a wildcard to anything other than
# the latest version in this situation, so the version has to be more precise than 0.*.
bevy_reflect = { version = "0.18", package = "bevy_reflect", features = [
	"glam",
], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-big-array = { version = "0.5", optional = true }

[dev-dependencies]
quake-util = { version = "0.4", features = ["std"] }

[features]
default = ["meshing"]
meshing = ["dep:texture_packer"]
"bevy_reflect" = ["dep:bevy_reflect"]
serde = ["dep:serde", "dep:serde-big-array", "smallvec/serde", "bitflags/serde"]
