[package]
name = "qbsp_macros"

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = [ "extra-traits" ] }

[dev-dependencies]
qbsp = { path = ".." }
