[package]
name = "write-lightmaps"
publish = false
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
qbsp = { path = "../.." }
image = { version = "*", default-features = false, features = ["png"] }